docs/oldExcelGrammar.pegjs
Int32 = s:[+-]?number: ( oct:("0"[oO][0-7]+) { var res=[]; for(var i=0; i<oct.length; i++) if(oct[i] instanceof Array) res.push(oct[i].join("")); else res.push(oct[i]); var a = res.join(""); return parseInt(a.slice(0,1)+a.slice(2), 8);} / b:("0"[bB][01]+) 
{ var res=[]; for(var i=0; i<b.length; i++) if(b[i] instanceof Array) res.push(b[i].join("")); else res.push(b[i]); var a = res.join(""); return parseInt(a.slice(0,1)+a.slice(2), 2);} / h:("0"[xX][0-9a-fA-F]+) { var res=[]; for(var i=0; i<h.length; i++)
if(h[i] instanceof Array) res.push(h[i].join("")); else res.push(h[i]); var a = res.join(""); return parseInt(a, 16);} / d:[0-9]+ {return d.join("");}  ) {return parseInt(s+number);};
AsciiUpper = [A-Z];
character = [^\ufffe-\uffff] ;
letter = [a-z] / [A-Z];
digit = [0-9];
AddrR = "R" r:Int32 { return r;};
AddrC = "C" r:Int32 {return r;};
AddrR1C1 = r:AddrR c:AddrC {return new AST.Address(r, c, null, null);};
AddrA = r: (AsciiUpper + ) {return r.join("");};
AddrAAbs = ("$" / "") r:AddrA {return r;};
Addr1 = r:Int32 {return r;};
Addr1Abs = ("$" / "") r:Addr1 {return r;};

AddrA1 = l:AddrAAbs r:Addr1Abs {return new AST.Address(r, l, null, null);};
AnyAddr = AddrR1C1 / AddrA1;

MoreAddrR1C1 = ":" r:AddrR1C1 { return r;};
RangeR1C1 = r:AddrR1C1 l:MoreAddrR1C1 {return new AST.Range(r, l);};
MoreAddrA1 = ":" r:AddrA1 {return r;};
RangeA1 = r:AddrA1 l:MoreAddrA1 {return new AST.Range(r, l);};
RangeAny = RangeR1C1 / RangeA1;

WorksheetNameQuoted = "\'" r:((! "\'" character )+) "\'" { var res=[]; for(var i=0; i<r.length; i++) res.push(r[i].join("")); return res.join("");};
WorksheetNameUnquoted = r:((digit / letter) + ) {return r.join("");};
WorksheetName = WorksheetNameQuoted / WorksheetNameUnquoted;

WorkbookName = "[" r:((! ("["/"]") character )+) "]" { var res=[]; for(var i=0; i<r.length; i++) res.push(r[i].join("")); return res.join("");};
Workbook = WorkbookName / "" {return new FSharp.None();};

RangeReferenceWorksheet =  (wsname:WorksheetName "!") rng:RangeAny {return new AST.ReferenceRange(wsname, rng);}
RangeReferenceNoWorksheet = rng:RangeAny {return new AST.ReferenceRange(null, rng);}
RangeReference = RangeReferenceWorksheet / RangeReferenceNoWorksheet;

AddressReferenceWorksheet = wsname:WorksheetName "!" addr:AnyAddr {return new AST.ReferenceAddress(wsname, addr);}
AddressReferenceNoWorksheet = addr:AnyAddr {return new AST.ReferenceAddress(null, addr);}
AddressReference = AddressReferenceWorksheet / AddressReferenceNoWorksheet

NamedReferenceFirstChar = "_" / letter;
NamedReferenceLastChars = r:(("_" / letter / digit) *){return r.join("");};
NamedReference = c:NamedReferenceFirstChar s:NamedReferenceLastChars {return new AST.ReferenceNamed(null, c+s);}
StringReference = ["] r:(!["] character) + ["] { var res=[]; for(var i=0; i<r.length; i++) res.push(r[i].join("")); return new AST.ReferenceString(null, res.join(""));};
ConstantReference = r:Int32 {return new AST.ReferenceConstant(null, r);}

ReferenceKinds = RangeReference / AddressReference / ConstantReference / StringReference / NamedReference
Reference = w:Workbook ref:ReferenceKinds {ref.WorkbookName = w; return ref;}
FunctionName = r:((letter / ".") +) {return r.join("");}
Function =  f:FunctionName "(" args:ArgumentList ")" {return new AST.ReferenceFunction(null, f, args);} 
ArgumentList = (ExpressionDecl (ExpressionDecl ",") *) ?	

BinOpChar = "+" / "-" / "*" / "<" / ">"
BinOp2Char = "<="
BinOpLong = op:BinOp2Char exp:ExpressionDecl {return {operator:op, expression:exp};}	
BinOpShort = BinOpChar ExpressionDecl {return {operator:op, expression:exp};}
BinOp = BinOpLong / BinOpShort

UnaryOpChar = "+" / "-"
Formula = "=" ExpressionDecl;
ExpressionDecl = "(" ExpressionDecl ")" aux
				/ "(" ExpressionDecl ")"
				/ Function aux
				/ Function 
				/ Reference aux
				/ Reference 
				/ UnaryOpChar ExpressionDecl aux
				/ UnaryOpChar ExpressionDecl;
aux = BinOp ExpressionDecl
	 / BinOp ExpressionDecl aux;

Formula = "=" ExpressionDecl
 
